update jenkins file